--- a/clinfo/Makefile
+++ b/clinfo/Makefile
@@ -1,7 +1,7 @@
 
 
 all:
-	gcc -std=c99 -o clinfo clinfo.c -lOpenCL -L/home/rofox/lib
+	gcc -std=c99 -o clinfo clinfo.c -lOpenCL
 
 clean:
 	rm -rf clinfo
